k3s/manifests/adguard/networking/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-path
  namespace: adguard
spec:
  stripPrefixRegex:
    regex:
    - ^/adguard
