k3s/manifests/adguard/networking/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: adguard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`adguard.jedric.local`)
    kind: Rule
    services:
    - name: adguard
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard
  namespace: adguard
spec:
  entryPoints:
    - tcp-dns
  routes:
  - services:
    - name: adguard
      port: 53
